--- a/package.json
+++ b/package.json
@@ -86,5 +86,7 @@
     "vm2": "^3.4.6",
     "workbox-cli": "^3.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gitbook-plugin-workbox": "0.0.4"
+  }
 }
